# rust-postgres-rest

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  rustfmt.toml
.github/: dependabot.yml
experiment00/: Cargo.toml
experiment00-integration-tests/: Cargo.toml  README.md
experiment00-integration-tests/src/: setup.rs  test_main.rs
experiment00/src/: errors.rs
experiment00/src/endpoints/: index.rs  table.rs
experiment00/src/queries/: query_types.rs  select_all_tables.rs  select_table_stats.rs
postgres-rest/: Cargo.toml  README.md
postgres-rest-actix/: Cargo.toml  README.md
postgres-rest-actix/src/: error.rs  lib.rs
postgres-rest-actix/src/endpoints/: mod.rs  query_params_from_request.rs  table.rs
postgres-rest-actix/tests/: integration_tests.rs  setup.rs
postgres-rest/src/: lib.rs  stats_cache.rs
postgres-rest/src/queries/: foreign_keys.rs  insert_into_table.rs  mod.rs  postgres_types.rs  select_table_rows.rs  select_table_stats_cache.rs  update_table_rows.rs  utils.rs
postgres-rest/tests/: server.key
rust-postgres-rest/: Cargo.toml  README.md
rust-postgres-rest-actix/: Cargo.toml  README.md
rust-postgres-rest-actix/src/: error.rs  lib.rs
rust-postgres-rest-actix/src/endpoints/: query_params_from_request.rs  table.rs
rust-postgres-rest-actix/tests/: setup.rs  setup_db.sql
rust-postgres-rest/src/: db.rs  error.rs  lib.rs  stats_cache.rs
rust-postgres-rest/src/queries/: delete_table_rows.rs  execute_sql_query.rs  foreign_keys.rs  insert_into_table.rs  mod.rs  postgres_types.rs  query_types.rs  select_all_tables.rs  select_table_rows.rs  select_table_stats.rs  select_table_stats_cache.rs  update_table_rows.rs  utils.rs
rust-postgres-rest/tests/: server.crt  server.pem
src/: compat.rs  database.rs  db.rs  error.rs  errors.rs  lib.rs  main.rs  queries.rs  stats_cache.rs  table_api.rs
src/endpoints/: index.rs  mod.rs  table.rs
src/queries/: create_table.rs  delete_table_rows.rs  execute_sql_query.rs  foreign_keys.rs  get_all_table_columns.rs  get_all_tables.rs  insert_into_table.rs  mod.rs  postgres_types.rs  query_table.rs  query_table_stats.rs  query_types.rs  select_all_tables.rs  select_table_rows.rs  select_table_stats.rs  select_table_stats_cache.rs  table_stats.rs  update_table_rows.rs  utils.rs
tests/: integration_tests.rs  setup.rs  setup_db.sql
