[package]
name = "experiment00"
version = "0.1.0"
authors = ["Kai Yao <kai.b.yao@gmail.com>"]
edition = "2018"

[lib]
name = "experiment00"
path = "src/lib.rs"

[[bin]]
name = "experiment00bin"
path = "src/main.rs"

# [[bin]]
# name = "experiment00test"
# path = "src/test.rs"

[dependencies]
actix-web = "^0.7"
bit-vec = "^0.5"
chrono = { version = "^0.4", features = ["serde"] }
eui48 = { version = "^0.4", features = ["serde"] }
failure = "^0.1"
futures = "^0.1"
lazy_static = "^1.2"
num_cpus = "^1.9"
r2d2 = "^0.8"
r2d2_postgres = "^0.14"
postgres = { version = "^0.15", features = ["with-bit-vec", "with-chrono", "with-eui48", "with-serde_json", "with-time", "with-uuid"] }
postgres-protocol = "^0.3"
regex = "^1.1"
rust_decimal = { version = "^1.0", features = ["postgres"] }
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
sqlparser = "^0.3"
# need version 5 because rust-postgres requires it for UUID deserialization
uuid = {version = "^0.5", features = ["serde"]}

[dev-dependencies]
pretty_assertions = "^0.5"
