[package]
name = "experiment00"
version = "0.1.0"
authors = ["Kai Yao <kai.b.yao@gmail.com>"]
edition = "2018"

[lib]
name = "experiment00"
path = "src/lib.rs"

[[bin]]
name = "experiment00bin"
path = "src/main.rs"

# [[bin]]
# name = "experiment00test"
# path = "src/test.rs"

[dependencies]
actix = "^0.8"
actix-http = "^0.2"
actix-web = "^1.0"
actix-server = "^0.5"
actix-service = "^0.4"
bit-vec = "^0.5"
chrono = { version = "^0.4", features = ["serde"] }
crossbeam = "0.7.1" # needed for actix 0.8.3 to work
eui48 = { version = "^0.4", features = ["serde"] }
failure = "^0.1"
futures = "^0.1"
lazy_static = "^1.2"
lexical = "^2.1"
num_cpus = "^1.9"
# r2d2 = "^0.8"
# r2d2_postgres = "^0.14"
# postgres = { version = "^0.15", features = ["with-bit-vec", "with-chrono", "with-eui48", "with-serde_json", "with-time", "with-uuid"] }
postgres-protocol = "^0.3"
regex = "^1.1"
# rust_decimal = { version = "^1.0", features = ["postgres"] }
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
sqlparser = "^0.3"
tokio-postgres = { version = "0.4.0-rc.2", features = ["with-bit-vec-0_5", "with-chrono-0_4", "with-eui48-0_4", "with-eui48-0_4", "with-serde_json-1", "with-uuid-0_7"] }
# need version 5 because rust-postgres requires it for UUID deserialization
uuid = { version = "^0.7", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "^0.6"
