[package]
name = "experiment00"
version = "0.1.0"
authors = ["Kai Yao <kai.b.yao@gmail.com>"]
edition = "2018"

[lib]
name = "experiment00"
path = "src/lib.rs"

[[bin]]
name = "experiment00bin"
path = "src/main.rs"

# [[bin]]
# name = "experiment00test"
# path = "src/test.rs"

[dependencies]
actix = "0.8.3"
actix-http = "0.2.4"
actix-web = "1.0.2"
actix-server = "0.5.1"
actix-service = "0.4.1"
bb8 = "0.3.0"
bb8-postgres = { version = "0.3.0", features = ["with-bit-vec-0_5", "with-chrono-0_4", "with-eui48-0_4", "with-eui48-0_4", "with-serde_json-1", "with-uuid-0_7"] }
bit-vec = "0.6.1"
chrono = { version = "0.4.6", features = ["serde"] }
eui48 = { version = "0.4.6", features = ["serde"] }
failure = "0.1.5"
futures01 = { package = "futures", version = "0.1.27" }
futures03 = { package = "futures-preview", version = "0.3.0-alpha.16", features = ["compat"] }
lazy_static = "1.3.0"
postgres-protocol = "0.4.0"
regex = "1.1.7"
#rust_decimal = { version = "1.0.1", git = "https://github.com/kaibyao/rust-decimal.git", features = ["postgres"] }
serde = { version = "^1.0.92", features = ["derive"] }
serde_json = "^1.0.39"
sqlparser = "0.3.1"
tokio-futures = { version = "0.2.0", features = ["async-await-preview"], git = "https://github.com/tokio-rs/tokio.git" }
tokio-postgres = { version = "0.4.0-rc.2", features = ["with-bit-vec-0_5", "with-chrono-0_4", "with-eui48-0_4", "with-eui48-0_4", "with-serde_json-1", "with-uuid-0_7"] }
uuid = { version = "^0.7.4", features = ["serde"] }

[dependencies.rust_decimal]
# version = "1.0.1"
git = "https://github.com/kaibyao/rust-decimal.git"
features = ["postgres", "serde"]

[dev-dependencies]
pretty_assertions = "^0.6"
