[package]
name = "experiment00-integration-tests"
version = "0.1.0"
authors = ["Kai Yao <kai.b.yao@gmail.com>"]
edition = "2018"

[[bin]]
name = "experiment00-integration-tests"
path = "src/main.rs"

[dependencies]
actix = "^0.8"
actix-web = "^1.0"
futures = "^0.1"
futures03 = { package = "futures-preview", version = "0.3.0-alpha.16", features = ["compat"] }
tokio-postgres = { version = "0.4.0-rc.2", features = ["with-bit-vec-0_5", "with-chrono-0_4", "with-eui48-0_4", "with-eui48-0_4", "with-serde_json-1", "with-uuid-0_7"] }
experiment00 = { path = "../experiment00"}

[dev-dependencies]
pretty_assertions = "^0.6"
