[package]
name = "postgres-rest-actix"
version = "0.1.0"
authors = ["Kai Yao <kai.b.yao@gmail.com>"]
edition = "2018"

[lib]
name = "postgres_rest_actix"
path = "src/lib.rs"

[dependencies]
actix = "0.8.3"
actix-web = "1.0.5"
failure = "0.1.5"
futures = "0.3.15"
futures03 = { package = "futures-preview", version = "0.3.0-alpha.18", features = ["compat"] }
lazy_static = "1.3"
rayon = "1.1.0"
postgres-rest = { version = "0.1.0", path = "../postgres-rest" }
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.40"
tokio-postgres = "0.4.0-rc.3"

[dev-dependencies]
pretty_assertions = "0.6.1"
reqwest = "0.9.19"
tokio-postgres = { version = "0.4.0-rc.3", features = ["with-chrono-0_4", "with-eui48-0_4", "with-eui48-0_4", "with-serde_json-1", "with-uuid-0_7"] }
